--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    background: #bdc3c7;
+    background: #000;
     font-family: 'Lato', sans-serif;
     font-weight: 600;
 }
